--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-09  Eli Zaretskii  <eliz@gnu.org>
+
+	* makefile.w32-in (BIG_STACK_DEPTH): Enlarge to 2200.  (Bug#11649)
+
 2012-06-09  Chong Yidong  <cyd@gnu.org>
 
 	* face-remap.el (face-remap-add-relative, face-remap-set-base)
