--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -5,6 +5,12 @@
 
 2012-06-09  Eli Zaretskii  <eliz@gnu.org>
 
+	Fix parallel builds: make sure loaddefs.el is not being written
+	while Lisp files are compiled.
+	(compile): Don't depend on 'mh-autoloads'.
+	(compile-CMD, compile-SH): Depend on 'autoloads'.
+	(bootstrap): Don't depend on 'autoloads' and 'mh-autoloads'.
+
 	* makefile.w32-in (BIG_STACK_DEPTH): Enlarge to 2200.  (Bug#11649)
 
 2012-06-09  Chong Yidong  <cyd@gnu.org>
