--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-09  Chong Yidong  <cyd@gnu.org>
+
+	* ebuff-menu.el (electric-buffer-list): Preserve header line.
+
 2012-06-09  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (special-display-popup-frame): Don't use
