--- a/doc/misc/ChangeLog
+++ b/doc/misc/ChangeLog
@@ -2,6 +2,11 @@
 
 	* Version 24.1 released.
 
+2012-06-01  Chong Yidong  <cyd@gnu.org>
+
+	* sc.texi: Remove bogus @ifinfo commands which prevent makeinfo
+	compilation for html-mono.
+
 2012-05-16  Bastien Guerry  <bzg@gnu.org>
 
 	* org.texi (Durations and time values): Fix typo.
