Emacs manual tweaks to accomodate 7x9 pdf.
* emacs.texi: Update ISBN and edition number.

* anti.texi:
* building.texi:
* cmdargs.texi:
* custom.texi:
* display.texi:
* files.texi:
* frames.texi:
* glossary.texi:
* misc.texi:
* mule.texi:
* programs.texi:
* sending.texi:
* text.texi: Copyedits to avoid underfull/overfull in 7x9 manual.

--- a/doc/emacs/emacs.texi
+++ b/doc/emacs/emacs.texi
@@ -14,7 +14,7 @@
 @c be something added by the FSF during the publishing process.
 @c Also, the lispref uses a float (3.0), whereas this uses an ordinal,
 @c so the format is not even consistent.
-@set EDITION   Sixteenth
+@set EDITION   Seventeenth
 @include emacsver.texi
 
 @copying
@@ -96,10 +96,10 @@ developing GNU and promoting software freedom.''
 Published by the Free Software Foundation @*
 51 Franklin Street, Fifth Floor @*
 Boston, MA 02110-1301 USA @*
-ISBN 1-882114-86-8
+ISBN 978-0-9831592-2-3
 
 @sp 2
-Cover art by Etienne Suvasa.
+Cover art by Etienne Suvasa; cover design by Matt Lee.
 
 @end titlepage
 
