--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,21 @@
+2012-06-10  Chong Yidong  <cyd@gnu.org>
+
+	* emacs.texi: Update ISBN and edition number.
+
+	* anti.texi:
+	* building.texi:
+	* cmdargs.texi:
+	* custom.texi:
+	* display.texi:
+	* files.texi:
+	* frames.texi:
+	* glossary.texi:
+	* misc.texi:
+	* mule.texi:
+	* programs.texi:
+	* sending.texi:
+	* text.texi: Copyedits to avoid underfull/overfull in 7x9 manual.
+
 2012-06-01  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.1 released.
