--- a/doc/emacs/frames.texi
+++ b/doc/emacs/frames.texi
@@ -499,7 +499,8 @@ Add a line to your init file, modifying the variable
 (@pxref{Frame Parameters}), like this:
 
 @example
-(add-to-list 'default-frame-alist '(font . "DejaVu Sans Mono-10"))
+(add-to-list 'default-frame-alist
+             '(font . "DejaVu Sans Mono-10"))
 @end example
 
 @cindex X defaults file
@@ -667,7 +668,7 @@ The font slant---normally @samp{r} (roman), @samp{i} (italic),
 @samp{o} (oblique), @samp{ri} (reverse italic), or @samp{ot} (other).
 Some font names support other values.
 @item widthtype
-The font width---normally @samp{normal}, @samp{condensed},
+The font width---normally one of @samp{normal}, @samp{condensed},
 @samp{semicondensed}, or @samp{extended}.  Some font names support
 other values.
 @item style
