More minor manual copyedits to fix 7x9 manual underfull/overfull hboxes.
* doc/emacs/emacs.texi: Remove urlcolor setting.

* doc/lispref/elisp.texi, vol1.texi, vol2.texi: Remove urlcolor setting.

* doc/lispref/vol2.texi: Include package.texi.

--- a/doc/emacs/anti.texi
+++ b/doc/emacs/anti.texi
@@ -71,9 +71,10 @@ modes, such as Shell mode, now implement their own inline completion
 commands instead of using @code{completion-at-point}.
 
 @item
-We have removed various options for controlling how windows are used,
-e.g.@: @code{display-buffer-base-action}, @code{display-buffer-alist},
-@code{window-combination-limit}, and @code{window-combination-resize}.
+We have removed several options for controlling how windows are used,
+such as @code{display-buffer-base-action},
+@code{display-buffer-alist}, @code{window-combination-limit}, and
+@code{window-combination-resize}.
 
 @item
 The command @kbd{M-x customize-themes} has been removed.  Emacs no
