--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-11  Chong Yidong  <cyd@gnu.org>
+
+	* emacs.texi: Remove urlcolor setting.
+
 2012-06-10  Chong Yidong  <cyd@gnu.org>
 
 	* emacs.texi: Update ISBN and edition number.
