--- a/doc/emacs/building.texi
+++ b/doc/emacs/building.texi
@@ -1495,7 +1495,7 @@ eval-buffer} is similar but evaluates the entire buffer.
 @vindex eval-expression-print-level
 @vindex eval-expression-print-length
 @vindex eval-expression-debug-on-error
-  The customizable variables @code{eval-expression-print-level} and
+  The options @code{eval-expression-print-level} and
 @code{eval-expression-print-length} control the maximum depth and
 length of lists to print in the result of the evaluation commands
 before abbreviating them.  @code{eval-expression-debug-on-error}
