--- a/doc/emacs/cmdargs.texi
+++ b/doc/emacs/cmdargs.texi
@@ -577,8 +577,8 @@ does not use @env{TZ} at all.
 The user's login name.  See also @env{LOGNAME}.  On MS-DOS, this
 defaults to @samp{root}.
 @item VERSION_CONTROL
-Used to initialize the @code{version-control} Lisp variable
-(@pxref{Backup Names}).
+Used to initialize the @code{version-control} variable (@pxref{Backup
+Names}).
 @end table
 
 @node Misc Variables
