--- a/doc/emacs/text.texi
+++ b/doc/emacs/text.texi
@@ -1015,11 +1015,11 @@ Both accept numeric arguments as repeat counts.
 @kindex C-c C-f @r{(Outline mode)}
 @kindex C-c C-b @r{(Outline mode)}
 @kindex C-c C-u @r{(Outline mode)}
-  The commands @kbd{C-c C-f} (@code{outline-forward-same-level}) and
-@kbd{C-c C-b} (@code{outline-backward-same-level}) move from one
-heading line to another visible heading at the same depth in the
-outline.  @kbd{C-c C-u} (@code{outline-up-heading}) moves backward to
-another heading that is less deeply nested.
+  @kbd{C-c C-f} (@code{outline-forward-same-level}) and @kbd{C-c C-b}
+(@code{outline-backward-same-level}) move from one heading line to
+another visible heading at the same depth in the outline.  @kbd{C-c
+C-u} (@code{outline-up-heading}) moves backward to another heading
+that is less deeply nested.
 
 @node Outline Visibility
 @subsection Outline Visibility Commands
@@ -2311,8 +2311,7 @@ hides text), and @code{intangible} (which disallows moving point
 within the text).  The @samp{Remove Special} menu item removes all of
 these special properties from the text in the region.
 
-  The @code{invisible} and @code{intangible} properties are not saved
-in the @samp{text/enriched} format.
+  The @code{invisible} and @code{intangible} properties are not saved.
 
 @node Text Based Tables
 @section Editing Text-based Tables
