--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,9 @@
+2012-06-11  Chong Yidong  <cyd@gnu.org>
+
+	* elisp.texi, vol1.texi, vol2.texi: Remove urlcolor setting.
+
+	* vol2.texi: Include package.texi.
+
 2012-06-01  Chong Yidong  <cyd@gnu.org>
 
 	* Version 24.1 released.
