--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-11  Chong Yidong  <cyd@gnu.org>
+
+	* image.el (imagemagick-register-types): Put the ImageMagick entry
+	at the end of image-type-file-name-regexps.
+
 2012-06-11  Johan Bockgård  <bojohan@gnu.org>
 
 	* emacs-lisp/pcase.el (pcase-UPAT, pcase-QPAT): New edebug specs.
