--- a/etc/NEWS
+++ b/etc/NEWS
@@ -80,6 +80,9 @@ ImageMagick types are treated as images.  The function
 `imagemagick-filter-types' returns the list of types that will be
 treated as images.
 
+*** Images displayed via ImageMagick now support transparency and the
+:background image spec property.
+
 ** String values for `initial-buffer-choice' also apply to emacsclient
 frames, if emacsclient is only told to open a new frame without
 specifying any file to visit or expression to evaluate.
