--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-11  Chong Yidong  <cyd@gnu.org>
+
+	* display.texi (ImageMagick Images): ImageMagick now supports the
+	:background property.
+
 2012-06-10  Dmitry Antipov  <dmantipov@yandex.ru>
 
 	* internals.texi (Garbage Collection): Typo fix.
