--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-11  Chong Yidong  <cyd@gnu.org>
+
+	* image.c (imagemagick_load_image): Implement transparency.
+
 2012-06-10  Andreas Schwab  <schwab@linux-m68k.org>
 
 	* regex.c (at_begline_loc_p): Also recognize `(?N:' and correctly
