--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-11  Glenn Morris  <rgm@gnu.org>
+
+	* configure.in (SYSTEM_TYPE): New AC_DEFINE.
+
 2012-06-09  Michael Albinus  <michael.albinus@gmx.de>
 
 	* configure.in (dbus_type_is_valid): Check for library function.
