--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-06-11  Glenn Morris  <rgm@gnu.org>
+
+	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/darwin.h:
+	* s/gnu-kfreebsd.h, s/gnu-linux.h, s/gnu.h, s/hpux10-20.h:
+	* s/irix6-5.h, s/ms-w32.h, s/msdos.h, s/template.h:
+	* s/usg5-4-common.h: Move SYSTEM_TYPE to configure.
+
 2012-06-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* alloc.c (make_byte_code): New function.
