--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-12  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* image.c (imagemagick_load_image): Remove unused label.
+
 2012-06-11  Glenn Morris  <rgm@gnu.org>
 
 	* s/aix4-2.h, s/bsd-common.h, s/cygwin.h, s/darwin.h:
