--- a/etc/NEWS
+++ b/etc/NEWS
@@ -128,6 +128,8 @@ character when doing minibuffer filename prompts.
 
 ** `goto-char' is now bound to `M-g c'.
 
+** New input method `vietnamese-vni'.
+
 
 * Changes in Specialized Modes and Packages in Emacs 24.2
 
