--- a/lisp/erc/ChangeLog
+++ b/lisp/erc/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-12  Chong Yidong  <cyd@gnu.org>
+
+	* erc-dcc.el (erc-dcc-chat-filter-functions): Rename from
+	erc-dcc-chat-filter-hook, since this is an abnormal hook.
+
 2012-06-08  Chong Yidong  <cyd@gnu.org>
 
 	* erc.el (erc-direct-msg-face, erc-header-line, erc-input-face)
