--- a/lisp/url/ChangeLog
+++ b/lisp/url/ChangeLog
@@ -1,5 +1,9 @@
 2012-06-12  Chong Yidong  <cyd@gnu.org>
 
+	* url-handlers.el: Re-order file to avoid recursive load.
+
+2012-06-12  Chong Yidong  <cyd@gnu.org>
+
 	* url-handlers.el (url-handler-regexp):
 	* url-nfs.el (url-nfs-automounter-directory-spec):
 	* url-vars.el (url-load-hook): Convert to defcustom.
