Remove src/s/sol2-10.h
* configure.in (HAVE_PROCFS, _STRUCTURED_PROC): New AC_DEFINEs.
(opsysfile): Set specially for sol2-10.

* src/s/gnu-linux.h (HAVE_PROCFS): Move to configure.

* src/s/sol2-10.h: Remove file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2012-06-12  Glenn Morris  <rgm@gnu.org>
 
+	* configure.in (HAVE_PROCFS, _STRUCTURED_PROC): New AC_DEFINEs.
+	(opsysfile): Set specially for sol2-10.
+
 	* configure.in (BROKEN_SA_RESTART, USG_SUBTTY_WORKS):
 	New AC_DEFINEs, for hpux11.
 	(opsysfile): Set specially for hpux11.
