* src/s/gnu.h (POSIX_SIGNALS): Remove (again).
This was added in 2012-01 in response to http://debbugs.gnu.org/10552 .
However, this issue had already been fixed in the trunk two years
earlier, by removing POSIX_SIGNALS altogether. Ref:

http://lists.gnu.org/archive/html/emacs-devel/2010-04/msg00002.html

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-13  Glenn Morris  <rgm@gnu.org>
+
+	* s/gnu.h (POSIX_SIGNALS): Remove (not used since 2010-05-04).
+
 2012-06-13  Paul Eggert  <eggert@cs.ucla.edu>
 
 	USE_LISP_UNION_TYPE + USE_LSB_TAG cleanup (Bug#11604)
