--- a/etc/ChangeLog
+++ b/etc/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-13  Deniz Dogan  <deniz@dogan.se>
+
+	* tutorials/TUTORIAL.sv: Fix grammar and a couple of typos.
+
 2012-06-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* PROBLEMS (68000 C compiler problems): Remove obsolete section.
