--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/dbus.el (dbus-call-method): Use timeout for `read-event'.
+	Otherwise, it blocks in batch mode.
+
 2012-06-13  Juanma Barranquero  <lekktu@gmail.com>
 
 	* help-mode.el (bookmark-make-record-default): Declare.
